feat: add items bayan ((date +'%Y-%m-%d %H:%M:%S'))

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -9,24 +9,24 @@
 <body>
     <div class="bayan">
         <input type="checkbox" id="tab1" name="tab-group">
-        <label for="tab1" class="tab-title">Заголовок пункта</label> 
-        <div class="memas-img"><img src="" alt="" class="memas"></div>
+        <label for="tab1" class="tab-title">Organic Space suit</label> 
+        <div class="memas-img"><img src="/cssBayan/img/photo_2023-01-29_19-11-20.jpg" alt="" class="memas"></div>
 
         <input type="checkbox" id="tab2" name="tab-group">
-        <label for="tab2" class="tab-title">Заголовок пункта</label> 
-        <div class="memas-img"><img src="" alt="" class="memas"></div>
+        <label for="tab2" class="tab-title">Meditation</label> 
+        <div class="memas-img"><img src="/cssBayan/img/photo_2023-02-12_20-37-06.jpg" alt="" class="memas"></div>
 
         <input type="checkbox" id="tab3" name="tab-group">
-        <label for="tab3" class="tab-title">Заголовок пункта</label> 
-        <div class="memas-img"><img src="" alt="" class="memas"></div>
+        <label for="tab3" class="tab-title">Productive time</label> 
+        <div class="memas-img"><img src="/cssBayan/img/photo_2023-03-12_12-17-30.jpg" alt="" class="memas"></div>
 
         <input type="checkbox" id="tab4" name="tab-group">
-        <label for="tab4" class="tab-title">Заголовок пункта</label> 
-        <div class="memas-img"><img src="" alt="" class="memas"></div>
+        <label for="tab4" class="tab-title">Support service</label> 
+        <div class="memas-img"><img src="/cssBayan/img/photo_2023-03-12_12-18-09.jpg" alt="" class="memas"></div>
 
         <input type="checkbox" id="tab5" name="tab-group">
-        <label for="tab5" class="tab-title">Заголовок пункта</label> 
-        <div class="memas-img"><img src="" alt="" class="memas"></div>
+        <label for="tab5" class="tab-title">Comfort Zone</label> 
+        <div class="memas-img"><img src="/cssBayan/img/photo_2023-01-29_22-31-29.jpg" alt="" class="memas"></div>
     </div>
 </body>
 </html>
