--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -6,29 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
+    <script src="https://kit.fontawesome.com/0a980bc004.js" crossorigin="anonymous"></script>
     <title>cssBayan</title>
 </head>
 <body>
     <div class="bayan">
-        <input type="checkbox" id="tab1" name="tab-group">
-        <label for="tab1" class="tab-title">Organic Space suit</label> 
-        <div class="memas-img"><img src="/cssBayan/img/photo_2023-01-29_19-11-20.jpg" alt="" class="memas"></div>
+        <div class="bayan-item bayan-item--default">
+            <input type="checkbox" id="tab1" name="tab-group">
+            <label for="tab1" class="tab-title">Organic Space suit 
+                <span class="fa-stack fa-lg">
+                    <i class="fa fa-hand-o-left" ></i>
+                </span>
+            </label> 
+            <div class="memas-img"><img src="/cssBayan/img/photo_2023-01-29_19-11-20.jpg" alt="" class="memas"></div>
+        </div>
 
-        <input type="checkbox" id="tab2" name="tab-group">
-        <label for="tab2" class="tab-title">Meditation</label> 
-        <div class="memas-img"><img src="/cssBayan/img/photo_2023-02-12_20-37-06.jpg" alt="" class="memas"></div>
+        <div class="bayan-item">
+            <input type="checkbox" id="tab2" name="tab-group">
+            <label for="tab2" class="tab-title">Meditation</label> 
+            <div class="memas-img"><img src="/cssBayan/img/photo_2023-02-12_20-37-06.jpg" alt="" class="memas"></div>
+        </div>
 
-        <input type="checkbox" id="tab3" name="tab-group">
-        <label for="tab3" class="tab-title">Productive time</label> 
-        <div class="memas-img"><img src="/cssBayan/img/photo_2023-03-12_12-17-30.jpg" alt="" class="memas"></div>
+        <div class="bayan-item">
+            <input type="checkbox" id="tab3" name="tab-group">
+            <label for="tab3" class="tab-title">Productive time</label> 
+            <div class="memas-img"><img src="/cssBayan/img/photo_2023-03-12_12-17-30.jpg" alt="" class="memas"></div>
+        </div>
 
-        <input type="checkbox" id="tab4" name="tab-group">
-        <label for="tab4" class="tab-title">Support service</label> 
-        <div class="memas-img"><img src="/cssBayan/img/photo_2023-03-12_12-18-09.jpg" alt="" class="memas"></div>
+        <div class="bayan-item">
+            <input type="checkbox" id="tab4" name="tab-group">
+            <label for="tab4" class="tab-title">Support service</label> 
+            <div class="memas-img"><img src="/cssBayan/img/photo_2023-03-12_12-18-09.jpg" alt="" class="memas"></div>
+        </div>
 
-        <input type="checkbox" id="tab5" name="tab-group">
-        <label for="tab5" class="tab-title">Comfort Zone</label> 
-        <div class="memas-img"><img src="/cssBayan/img/photo_2023-01-29_22-31-29.jpg" alt="" class="memas"></div>
+        <div class="bayan-item">
+            <input type="checkbox" id="tab5" name="tab-group">
+            <label for="tab5" class="tab-title">Comfort Zone</label> 
+            <div class="memas-img"><img src="/cssBayan/img/photo_2023-01-29_22-31-29.jpg" alt="" class="memas"></div>
+        </div>
     </div>
 </body>
 </html>
